# ec3-python-wrapper

./: .gitignore  LICENSE  README.md  ec3_jupyter.ipynb  ec3_materials_plot.ipynb  ec3_overview.ipynb  pyproject.toml  readthedocs.yaml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/source/: abstract.rst  categories.rst  conf.py  ec3-api.rst  epds.rst  getting-started.rst  index.rst  materials.rst  projects.rst  utilities.rst
docs/source/_static/: custom.css
ec3/: __init__.py  ec3_api.py  ec3_categories.py  ec3_epds.py  ec3_materials.py  ec3_projects.py  ec3_urls.py  ec3_utils.py
ec3/docs/source/: conf.py
examples/: ec3_concrete_epd_study.ipynb
