[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ec3_python_wrapper"
authors = [
  { name="Jared Friedman"},
]
description = "A python wrapper around the EC3 api by Building Transparency"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.black]
line-length = 88
target-version = ['py38']