[bdist_wheel]
universal=1

[metadata]
name = ec3-python-wrapper
version = attr: ec3.__version__

description = Python Wrapper for Building Transparency EC3 API
long_description = file: README.md
long_description_content_type = text/markdown
author = Jared Friedman
url = https://github.com/jbf1212/ec3-python-wrapper
license = The MIT License (MIT)
copyright = Copyright 2024 Jared Friedman
keywords = ec3, api
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Topic :: Software Development
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    requests >= 2
    pgeocode >= 0.3.0
